samples/_failures_safe/1761794717_e7bb8d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_accf9371.c: In function ‘main’:
./samples/SAFE/__tmp_accf9371.c:198:36: error: expected ‘;’ at end of input
  198 |     for (int i = 0; i < token_count
      |                                    ^
      |                                    ;
./samples/SAFE/__tmp_accf9371.c:198:5: error: expected declaration or statement at end of input
  198 |     for (int i = 0; i < token_count
      |     ^~~
